<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Fragments.MovieItemFragment">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:id="@+id/sideLayout"
            android:visibility="visible">
            <ProgressBar
                android:id="@+id/progress_loader"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="visible" />
        </FrameLayout>

        <FrameLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/mainLayout"
            android:visibility="gone">

            <com.google.android.material.appbar.AppBarLayout
                android:translationZ="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                app:elevation="0dp">

                <com.google.android.material.appbar.MaterialToolbar
                    app:titleTextColor="@color/toolbarIconColor"
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:background="#B30000AA"
                    android:layout_height="wrap_content"
                    android:elevation="0dp">

                </com.google.android.material.appbar.MaterialToolbar>

            </com.google.android.material.appbar.AppBarLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/movie_image"
                    android:layout_width="match_parent"
                    android:src="@drawable/ic_baseline_broken_image_24"
                    android:scaleType="centerInside"
                    android:layout_height="450dp"/>


                <LinearLayout
                    android:layout_marginTop="@dimen/shr_product_grid_spacing"
                    android:paddingStart="@dimen/shr_product_grid_spacing_mid"
                    android:paddingEnd="@dimen/shr_product_grid_spacing_mid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_width="90dp"
                        android:textSize="20sp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/data"/>
                    <TextView
                        android:id="@+id/date"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="@dimen/shr_product_grid_spacing"
                    android:paddingStart="@dimen/shr_product_grid_spacing_mid"
                    android:paddingEnd="@dimen/shr_product_grid_spacing_mid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:layout_width="90dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/director"/>
                    <TextView
                        android:id="@+id/director"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="@dimen/shr_product_grid_spacing"
                    android:paddingStart="@dimen/shr_product_grid_spacing_mid"
                    android:paddingEnd="@dimen/shr_product_grid_spacing_mid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_width="90dp"
                        android:textSize="20sp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/writer"/>
                    <TextView
                        android:id="@+id/writer"
                        android:layout_width="match_parent"
                        android:textSize="20sp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="@dimen/shr_product_grid_spacing"
                    android:paddingStart="@dimen/shr_product_grid_spacing_mid"
                    android:paddingEnd="@dimen/shr_product_grid_spacing_mid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_width="90dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/language"/>
                    <TextView
                        android:id="@+id/language"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="@dimen/shr_product_grid_spacing"
                    android:paddingStart="@dimen/shr_product_grid_spacing_mid"
                    android:paddingEnd="@dimen/shr_product_grid_spacing_mid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_width="90dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/country"/>
                    <TextView
                        android:textSize="20sp"
                        android:id="@+id/country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_gravity=""
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|bottom">
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/addButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:width="250dp"
                        app:icon="@drawable/ic_baseline_bookmark_added_24"
                        android:text="@string/add_to_watched"
                        />
                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:id="@+id/deleteButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_baseline_bookmark_remove_24"
                        android:width="250dp"
                        android:text="@string/remove_from_watched"
                        />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </FrameLayout>
</layout>